# GPGPU

./: README.md
CUDA_examples/: README
CUDA_examples/1_Basic/1_vectorAdd/: Makefile  vectorAdd.cu
CUDA_examples/1_Basic/2_matrixMul/: matrixMul.cu  run.sh
CUDA_examples/1_Basic/3_transpose/: Makefile  transpose.cu
CUDA_examples/1_Basic/4_reduction/: Makefile  reduction.cpp  result.txt  run.sh
CUDA_examples/1_Basic/5_histogram/: Makefile  histogram256.cu  histogram64.cu  histogram_common.h  histogram_gold.cpp
CUDA_examples/1_Basic/6_scan/: Makefile
CUDA_examples/1_Basic/7_shfl_scan/: Makefile
CUDA_examples/3_Sort/1_sortingNetworks/: Makefile
CUDA_examples/3_Sort/1_sortingNetworks/doc/: Sorting Network.docx
CUDA_examples/3_Sort/OpenCL/bsort/: Makefile
CUDA_examples/3_Sort/OpenCL/bsort8/: Makefile
CUDA_examples/CUDA Pro Tips/: Bitonic Sort_ CUDA.html  Faster Parallel Reductions on Kepler.html
CUDA_examples/CUDA Pro Tips/Bitonic Sort_ CUDA_files/: styles.css
CUDA_examples/CUDA Pro Tips/Faster Parallel Reductions on Kepler_files/: api.js.download  fbevents.js.download  follow_button.82c7dfc5ca6196724781971f8af5eca4.en.html  hsBwMj6iLmk.html  iframe.html  roundtrip.js.download  satellite-594a6ce764746d506700c2a3.js.download  satellite-5991b02f64746d63240018f2.js.download  saved_resource(4).html  style.css
CUDA_examples/CUDA Pro Tips/GPU Pro Tip_ Fast Histograms Using Shared Atomics on Maxwell_files/: 300lo.json  count-data.js.download  embed.js.download  follow_button.82c7dfc5ca6196724781971f8af5eca4.en.html  iframe.html  saved_resource(4).html  saved_resource.html  script.js.download  sync.html
CUDA_examples/CUDAProTips/: GPU Pro Tip_ Fast Histograms Using Shared Atomics on Maxwell.html
CUDA_examples/CUDAProTips/Bitonic Sort_ CUDA_files/: nav.js.download
CUDA_examples/CUDAProTips/Faster Parallel Reductions on Kepler_files/: 300lo.json  955066571291140  XRPEH5KVE5GI5GW4KWAAR7  count-data.js.download  embed.js.download  s-code-contents-72887b31a9638f8b3cff7981a426c38c354f6412.js.download  satelliteLib-7ba51e58dc61bcb0e9311aadd02a0108ab24cc6c.js.download  saved_resource.html  sdk.js.download  sh.c7f897d92405181bbe1705e3.html  sync.html
CUDA_examples/CUDAProTips/GPU Pro Tip_ Fast Histograms Using Shared Atomics on Maxwell_files/: cb=gapi.loaded_0  hsBwMj6iLmk.html  satellite-5991afef64746d6deb010d48.js.download  sdk.js.download  sh.c7f897d92405181bbe1705e3.html  wjw6vwy.js.download
CUDA_professional/CodeSamples/chapter02/: Makefile  checkDeviceInfor  checkDimension  checkThreadIndex  defineGridBlock  sumArraysOnGPU-small-case  sumArraysOnGPU-timer  sumArraysOnHost  sumMatrixOnGPU  sumMatrixOnGPU-1D-grid-1D-block  sumMatrixOnGPU-2D-grid-1D-block  sumMatrixOnGPU-2D-grid-2D-block
CUDA_professional/CodeSamples/chapter03/: Makefile  reduceInteger  reduceInteger.cu  simpleDeviceQuery  simpleDivergence  simpleDivergence.cu  sumMatrix  sumMatrix.cu
CUDA_professional/CodeSamples/chapter04/: Makefile  a.out  globalVariable  memTransfer  pinMemTransfer  readSegment  readSegmentUnroll  simpleMathAoS  simpleMathSoA  sumArrayZerocpy  sumMatrixGPUManaged  sumMatrixGPUManual  transpose  writeSegment
CUDA_professional/CodeSamples/chapter05/: Makefile  checkSmemRectangle  checkSmemRectangle.cu  checkSmemSquare  constantReadOnly  constantStencil  reduceInteger  reduceInteger.cu  reduceIntegerShfl  reduceIntegerShfl.cu  reduceInteger_rev.cu  simpleShfl  simpleShfl.cu  transposeRectangle  transposeRectangle.cu
CUDA_professional/CodeSamples/chapter06/: Makefile  asyncAPI  simpleCallback  simpleHyperqBreadth  simpleHyperqDependence  simpleHyperqDepth  simpleHyperqOpenmp  simpleMultiAddBreadth  simpleMultiAddDepth
CUDA_professional/CodeSamples/chapter07/: Makefile  atomic-ordering  floating-point-accuracy  floating-point-perf  fmad  fmad_false  intrinsic-standard-comp  my-atomic-add  nbody  nbody_double  nbody_float
CUDA_professional/CodeSamples/chapter08/: Makefile  cublas  cuda-openacc  cufft  cufft-multi  cusparse  rand-kernel  replace-rand  replace-rand-streams  simple-data  simple-kernels  simple-parallel
CUDA_professional/CodeSamples/chapter10/: Makefile  crypt  crypt.config  crypt.constant  crypt.flexible  crypt.legacy  crypt.openmp  crypt.overlap  crypt.parallelized  debug-hazards  debug-segfault  debug-segfault.fixed  generate_data  generate_userkey  key  sumMatrixGPU  sumMatrixGPU_nvToolsExt  sumMatrixGPU_nvToolsExt.cu
CUDA_professional/Solutions/: ExerciseSolutions.docx  Solutions.docx
ipp-source-use/ch3_MPI/: CMakeLists.txt
ipp-source-use/ch3_MPI/src/: mpi_mat_vect_mult.c  mpi_mat_vect_time.c  mpi_odd_even.c  mpi_trap1.c
ipp-source-use/ch4_Pthreads/: CMakeLists.txt
ipp-source-use/ch4_Pthreads/src/: pth_busy_bar.c  pth_mat_vect_rand_split.c  pth_msg_sem.c  pth_pi_busy1.c
mpi/: CMakeLists.txt
mpi/examples/: CMakeLists.txt
mpi/examples/src/: environment.c  mpi_ping.c  support.c
mpi/exercises/: CMakeLists.txt
mpi/exercises/src/: Makefile.MPI.c  ser_array.c
pthread/examples/: CMakeLists.txt  condvar.c  dotprod_mutex.c  dotprod_serial.c  hello.c  hello_ex1.c  hello_ex2.c  hello_ex3.c  join.c  stack_manage.c
pthread/exercise/: CMakeLists.txt  arrayloops.c  bug1.c  bug1fix.c  bug2.c  bug2fix.c  bug4.c  bug4fix.c  bug5.c  bug5fix.c  bug6fix.c  condvar.c  detached.c  hello32.c  hello_arg2.c  join.c
pthread/exercise/MPI/: mpithreads_both  mpithreads_mpi  mpithreads_serial  mpithreads_threads
